--- a/powerboat/POWERBOAT-420.html
+++ b/powerboat/POWERBOAT-420.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-    <meta charset=utf-8>
+    <meta charset="UTF-8">
     <title>Лодки и катера POWERBOAT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,15 +12,9 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/media.css" type="text/css" media="all and (max-width:900px)">
 </head>
-
 <body>
-
-
     <wrapper>
-
         <header id="header">
-
-
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <a class="navbar-brand">
@@ -32,72 +25,190 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Главная</a></li>
-                        <li class="active"><a href="#">Каталог</a></li>
+                        <li><a href="index-catalog.html">Каталог</a></li>
                         <li><a href="index-contacts.html">Контакты</a></li>
                     </ul>
-                    <div>
+                    <span>
                         <h1>Лодки и катера POWERBOAT</h1>
-                    </div>
-
+                    </span>
                 </div>
             </nav>
         </header>
-
         <main id="main">
-            <div class="container">
-
-
-
-                <div class="pb420">
-                    <h2>POWERBOAT 420</h2>
-                    <img class="photo_right" src="img/rs_4624.jpg" alt="Заказать лодку 0638587378">
-
-                    <p class="responsive">
-                        <p>КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</p>
-
-                        <b> Аренда лимузина Крайслер от 1250 грн./час</b></p>
-                    <details class="more">
-                        <summary>Подробнее</summary>
-                        <p class="sclear">
-                            Прокат Лимузина Крайслер VIP на свадьбу, девичник... <br> Экслюзивный лимузин Крайслер 300С белоснежного цвета - один из лучших лимузинов напрокат в Киеве! Наверно поэтому фотографии нашего лимузина Крайслер можна встретить
-                            на сайтах большинства компании по прокату лимузинов в Киеве. Аренда лимузина Chrysler 300C на свадьбу в Киеве, девичник, день рождения или другие ответственные события будет на 100% оправдана позитивными эмоциями. Современный
-                            ухоженый лимузин крайслер укомплектован по последнему слову американского лимузиностроения, в лучшем тюнинговом ателье. Эксклюзивный наружный дизайн, огромные хромированные диски 20-го радиуса. Очень модное и гармоничное внутреннее
-                            убранство от Асанти: 3Д-зеркальный потолок с неоновыми дорожками и звездным небом, лазера, двухярусный зеркальный бар с подсветками укомплектованный бокалами и стаканами, имеющий емкости для охлаждения шампанского, комфортные
-                            диваны из комбинированной кожи, медийный центр CD/DWD/MP3,LCD мониторы, качественный звук, дископол, сенсорное управлениями функциями света и звука в пассажирском салоне, WI-FI, интерком для разговора с водителем помогут почувствовать
-                            максимум комфорта в лимузине 21-го века от кампании по прокату лимузинов в Киеве Лимолюкс! </p><br>
-
-
-
-                        <img class="photo_detail" src="img/rs_4631.jpg" alt="Заказ лимузина Киев 0638587378">
-                        <img class="photo_detail" src="img/rs_4624.jpg" alt="Заказ лимузина Киев 0638587378">
-                        <img class="photo_detail" src="img/cs_0056.jpg" alt="Заказ лимузина Киев 0638587378">
-                        <img class="photo_detail" src="img/PowerBoat_Fisher_M_12.jpg" alt="Заказ лимузина Киев 0638587378">
-                        <dl>
-                            <dt><b> Бронируйте заранее на нужную дату в компании Лимолюкс Киев по тел. +380638587378 </b></dt>
-                            <dd>Будем рады сделать ваш праздник особенным!</dd>
-                        </dl>
+            <div class="equipment">
+                <div class="cell"></div>
+                <div class="cell">
+                    <div class="our_boats">
+                        <div class="our_boats__boat">
+                            <a ref="POWERBOAT-470.html">
+                            </a>                                          
+                                <h2>POWERBOAT 470</h2>
+                                <p class="responsive">
+                                КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
+                                <details class="more">
+                                    <b> POWERBOAT 475</b></p>
+                                    <summary>Подробнее</summary>
+                                    <div class="options"></div>
+                                    <dl>
+                                        <dt><b> Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
+                                        <dd>Lorem ipsum dolor sit amet consectetur.</dd>
+                                    </dl>
+                                    <div class="specifications"></div>
+                                    <table class="specifications__b">
+                                        <tr class="specifications__a">
+                                            <td>Производитель:</td>
+                                            <td class="numeral">PowerBoat</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Модель:</td>
+                                            <td class="numeral">PB470</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Длина (м):</td>
+                                            <td class="numeral">4,7</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Ширина (м):</td>
+                                            <td class="numeral">1,97</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Пассажировместимость:</td>
+                                            <td class="numeral">4</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Грузоподъемность (кг):</td>
+                                            <td class="numeral">500</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Вес:</td>
+                                            <td class="numeral">470 кг</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Рекомендуемая мощность мотора (л.с.):</td>
+                                            <td class="numeral">60</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Макс. мощность мотора, л.с:</td>
+                                            <td class="numeral">115</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Высота борта на миделе:</td>
+                                            <td class="numeral"></td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Высота транца:</td>
+                                            <td class="numeral">508</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Килеватость на миделе:</td>
+                                            <td class="numeral">24</td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Осадка</td>
+                                            <td class="numeral"></td>
+                                        </tr>
+                                        <tr class="specifications__a">
+                                            <td>Объем блоков плавучести:</td>
+                                            <td class="numeral"></td>
+                                        </tr>
+                                    </table>
+                                    <img class="photo_bottom" src="img/470g (490x370).jpg" alt="Заказать лодку 0638587378">
+                                </details>    
+                        </div>
+                    </div>
+                    <div class="our_boats">
+                        <div class="our_boats__boat">
+                            <a ref="POWERBOAT-475.html">
+                            </a>                    
+                                <h2>POWERBOAT 475</h2>
+                                <p class="responsive">
+                                КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
+                                <details class="more">
+                                    <b> POWERBOAT 475</b></p>
+                                    <summary>Подробнее</summary>
+                                    <div class="options"></div>
+                                    <dl>
+                                        <dt><b>Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
+                                        <dd>Lorem ipsum dolor sit amet consectetur.</dd>
+                                    </dl>
+                                    <img class="photo_bottom" src="img/470 (490х370).jpg" alt="Заказать лодку 0638587378">
+                               </details>
+                        </div>
+                    </div>
+                    <div class="our_boats">
+                        <div class="our_boats__boat">
+                            <a ref="POWERBOAT-420.html">
+                            </a>                    
+                                <h2>POWERBOAT 420</h2>
+                                <p class="responsive">
+                                КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
+                                <details class="more">
+                                    <b> POWERBOAT 420</b></p>
+                                    <summary>Подробнее</summary>
+                                    <div class="options"></div>
+                                    <dl>
+                                        <dt><b> Lorem ipsum dolor sit amet. Киев по тел. +380638587378 </b></dt>
+                                        <dd>Lorem ipsum dolor sit amet consectetur.</dd>
+                                    </dl>
+                                    <img class="photo_bottom" src="img/470L (490х370).jpg" alt="Заказать лодку 0638587378">
+                                </details>
+                        </div>
+                    </div>
                 </div>
-
-
-
-
-
-                <div class="about-us">
-                    <P>Наша компания "POWERBOAT" основана в 2015 году. Мы занимаемся производством и продажей моторных катеров и понтонных лодок, подъемных механизмов и аксессуаров для водного транспорта. Наши высококвалифицированные специалисты имеют возможность
-                        воплотить так же и вашу мечту в реальность – создать такую лодку, о которой вы всегда мечтали.</P>
+                <div class="cell">
+                    <div class="advantages">
+                        <div id="dws-slider" class="carousel slide" data-ride="carousel">
+                            <!--Показатели-->
+                            <ol class="carousel-indicators">
+                                <li data-target="#dws-slider" data-slide-to="0" class="active"></li>
+                                <li data-target="#dws-slider" data-slide-to="1"></li>
+                                <li data-target="#dws-slider" data-slide-to="2"></li>
+                            </ol>            
+                            <!--Обертка для слайдов-->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active"><img src="img/470.png" alt="Картинка 1">
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                                <div class="item"><img src="img/475.png" alt="Картинка 2">
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                                <div class="item"><img src="img/420.png" alt="Картинка 3">
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                            </div>            
+                            <!--Элементы управления-->
+                            <a class="left carousel-control" href="#dws-slider" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#dws-slider" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <script>
+                            $('.carousel').carousel({
+                                interval: 6000
+                            })
+                        </script>                            
+                        <span class="our_company">
+                        Наша компания "POWERBOAT" основана в 2015 году. Мы занимаемся производством и продажей моторных катеров и понтонных лодок, подъемных механизмов и аксессуаров для водного транспорта. Наши высококвалифицированные специалисты имеют возможность воплотить так же и вашу мечту в реальность – создать такую лодку, о которой вы всегда мечтали.
+                        </span>
+                    </div>    
                 </div>
-
-                <form class="form">
-                    <p><input type="text" name="name" class="feedback-input" placeholder="Имя"></p>
-                    <p><input type="tel." name="tel." class="feedback-input" placeholder="Тел." id="tel."></p>
-                    <p><textarea name="text" id="comment" placeholder="Сообщение" class="feedback-input" cols="93" rows="5"></textarea></p>
-                    <input type="submit" value="Отправить" class="button-submit">
-                    <div class="ease"></div>
-                </form>
-
-
-            </div>
-        </main>
+                <div class="cell"></div>
+            </div>       
+            <form class="form">
+                <p><input type="text" name="name" class="feedback-input" placeholder="Имя"></p>
+                <p><input type="tel." name="tel." class="feedback-input" placeholder="Тел." id="tel."></p>
+                <p><textarea name="text" id="comment" placeholder="Сообщение" class="feedback-input" cols="93" rows="5"></textarea></p>
+                <input type="submit" value="Отправить" class="button-submit">
+                <div class="ease"></div>
+            </form>
+        </main>            
         <footer id="footer">
             <div class="black-block">
                 <div id="menu_item_contacts" class="Контакты">
@@ -107,24 +218,14 @@
                         <a href="#menu_item_Usloviya">События</a>
                         <a href="#menu_item_Akcii">Контакты</a>
                     </nav>
-
-
-
                     <a href="tel:+380638587378">
                         <img class="tel" src="img/main_logo.svg" alt="+380638587378">
                     </a>
                     <p class="number">+380638587378</p>
-
-
                     <div class="lowername">POWERBOAT</div>
                 </div>
-
-
-
             </div>
-
         </footer>
-
+    </wrapper>
 </body>
-
 </html>
