--- a/powerboat/index-catalog.html
+++ b/powerboat/index-catalog.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-    <meta charset=utf-8>
+    <meta charset="UTF-8">
     <title>Лодки и катера POWERBOAT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,7 +25,7 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Главная</a></li>
-                        <li class="active"><a href="#">Каталог</a></li>
+                        <li><a href="index-catalog.html">Каталог</a></li>
                         <li><a href="index-contacts.html">Контакты</a></li>
                     </ul>
                     <span>
@@ -36,135 +35,113 @@
             </nav>
         </header>
         <main id="main">
-            <div class="welcome">
+            <div class="equipment">
                 <div class="cell"></div>
                 <div class="cell">
                     <div class="our_boats">
                         <div class="our_boats__boat">
                             <a ref="POWERBOAT-470.html">                  
                                 <h2>POWERBOAT 470</h2>
-                                <img class="photo_right" src="img/powerboat-470.jpg" alt="Заказать лодку 0638587378">
                                 <p class="responsive">
-                                    КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
-                                    <b> Аренда лимузина Крайслер от 1250 грн./час</b></p>
+                                КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
                                 <details class="more">
+                                    <b> POWERBOAT 475</b></p>
                                     <summary>Подробнее</summary>
-                                    <p class="sclear">
-                                        Прокат Лимузина Крайслер VIP на свадьбу, девичник... <br> Экслюзивный лимузин Крайслер 300С белоснежного цвета - один из лучших лимузинов напрокат в Киеве! Наверно поэтому фотографии нашего лимузина Крайслер можна встретить
-                                        на сайтах большинства компании по прокату лимузинов в Киеве. Аренда лимузина Chrysler 300C на свадьбу в Киеве, девичник, день рождения или другие ответственные события будет на 100% оправдана позитивными эмоциями. Современный
-                                        ухоженый лимузин крайслер укомплектован по последнему слову американского лимузиностроения, в лучшем тюнинговом ателье. Эксклюзивный наружный дизайн, огромные хромированные диски 20-го радиуса. Очень модное и гармоничное
-                                        внутреннее убранство от Асанти: 3Д-зеркальный потолок с неоновыми дорожками и звездным небом, лазера, двухярусный зеркальный бар с подсветками укомплектованный бокалами и стаканами, имеющий емкости для охлаждения шампанского,
-                                        комфортные диваны из комбинированной кожи, медийный центр CD/DWD/MP3,LCD мониторы, качественный звук, дископол, сенсорное управлениями функциями света и звука в пассажирском салоне, WI-FI, интерком для разговора с водителем
-                                        помогут почувствовать максимум комфорта в лимузине 21-го века от кампании по прокату лимузинов в Киеве Лимолюкс! </p><br>
+                                    <div class="options"></div>
                                     <dl>
                                         <dt><b> Бронируйте заранее на нужную дату в компании Лимолюкс Киев по тел. +380638587378 </b></dt>
                                         <dd>Будем рады сделать ваш праздник особенным!</dd>
                                     </dl>
-                                </details>
+                                    <img class="photo_bottom" src="img/470g (490x370).jpg" alt="Заказать лодку 0638587378">
+                                </details>    
                             </a>                        
                         </div>
                     </div>
                     <div class="our_boats">
                         <div class="our_boats__boat">
-                            <a ref="POWERBOAT-475.html">                 
+                            <a href="POWERBOAT-475.html">                 
                                 <h2>POWERBOAT 475</h2>
-                                <img class="photo_right" src="img/maxresdefault.jpg" alt="Заказать лодку 0638587378">
                                 <p class="responsive">
-                                    КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
-                                    <b> Аренда лимузина Крайслер от 1250 грн./час</b></p>
+                                КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
                                 <details class="more">
+                                    <b> POWERBOAT 475</b></p>
                                     <summary>Подробнее</summary>
-                                    <p class="sclear">
-                                        Прокат Лимузина Крайслер VIP на свадьбу, девичник... <br> Экслюзивный лимузин Крайслер 300С белоснежного цвета - один из лучших лимузинов напрокат в Киеве! Наверно поэтому фотографии нашего лимузина Крайслер можна встретить
-                                        на сайтах большинства компании по прокату лимузинов в Киеве. Аренда лимузина Chrysler 300C на свадьбу в Киеве, девичник, день рождения или другие ответственные события будет на 100% оправдана позитивными эмоциями. Современный
-                                        ухоженый лимузин крайслер укомплектован по последнему слову американского лимузиностроения, в лучшем тюнинговом ателье. Эксклюзивный наружный дизайн, огромные хромированные диски 20-го радиуса. Очень модное и гармоничное
-                                        внутреннее убранство от Асанти: 3Д-зеркальный потолок с неоновыми дорожками и звездным небом, лазера, двухярусный зеркальный бар с подсветками укомплектованный бокалами и стаканами, имеющий емкости для охлаждения шампанского,
-                                        комфортные диваны из комбинированной кожи, медийный центр CD/DWD/MP3,LCD мониторы, качественный звук, дископол, сенсорное управлениями функциями света и звука в пассажирском салоне, WI-FI, интерком для разговора с водителем
-                                        помогут почувствовать максимум комфорта в лимузине 21-го века от кампании по прокату лимузинов в Киеве Лимолюкс! </p><br>
+                                    <div class="options"></div>
                                     <dl>
                                         <dt><b> Бронируйте заранее на нужную дату в компании Лимолюкс Киев по тел. +380638587378 </b></dt>
                                         <dd>Будем рады сделать ваш праздник особенным!</dd>
                                     </dl>
-                                </details>
+                                    <img class="photo_bottom" src="img/470 (490х370).jpg" alt="Заказать лодку 0638587378">
+                               </details>
                             </a>   
                         </div>
                     </div>
                     <div class="our_boats">
                         <div class="our_boats__boat">
-                                <a ref="POWERBOAT-420.html">                    
+                            <a ref="POWERBOAT-420.html">                 
                                 <h2>POWERBOAT 420</h2>
-                                <img class="photo_right" src="img/rs_4624.jpg" alt="Заказать лодку 0638587378">
                                 <p class="responsive">
-                                    КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
-                                    <b> Аренда лимузина Крайслер от 1250 грн./час</b></p>
+                                КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</КИЛЕВАТОСТЬ>
                                 <details class="more">
+                                    <b> POWERBOAT 475</b></p>
                                     <summary>Подробнее</summary>
-                                    <p class="sclear">
-                                        Прокат Лимузина Крайслер VIP на свадьбу, девичник... <br> Экслюзивный лимузин Крайслер 300С белоснежного цвета - один из лучших лимузинов напрокат в Киеве! Наверно поэтому фотографии нашего лимузина Крайслер можна встретить
-                                        на сайтах большинства компании по прокату лимузинов в Киеве. Аренда лимузина Chrysler 300C на свадьбу в Киеве, девичник, день рождения или другие ответственные события будет на 100% оправдана позитивными эмоциями. Современный
-                                        ухоженый лимузин крайслер укомплектован по последнему слову американского лимузиностроения, в лучшем тюнинговом ателье. Эксклюзивный наружный дизайн, огромные хромированные диски 20-го радиуса. Очень модное и гармоничное
-                                        внутреннее убранство от Асанти: 3Д-зеркальный потолок с неоновыми дорожками и звездным небом, лазера, двухярусный зеркальный бар с подсветками укомплектованный бокалами и стаканами, имеющий емкости для охлаждения шампанского,
-                                        комфортные диваны из комбинированной кожи, медийный центр CD/DWD/MP3,LCD мониторы, качественный звук, дископол, сенсорное управлениями функциями света и звука в пассажирском салоне, WI-FI, интерком для разговора с водителем
-                                        помогут почувствовать максимум комфорта в лимузине 21-го века от кампании по прокату лимузинов в Киеве Лимолюкс!</p><br>
+                                    <div class="options"></div>
                                     <dl>
                                         <dt><b> Бронируйте заранее на нужную дату в компании Лимолюкс Киев по тел. +380638587378 </b></dt>
                                         <dd>Будем рады сделать ваш праздник особенным!</dd>
                                     </dl>
-                                </details>
-                            </a>
+                                    <img class="photo_bottom" src="img/470L (490х370).jpg" alt="Заказать лодку 0638587378">
+                               </details>
+                            </a>   
                         </div>
                     </div>
                 </div>
                 <div class="cell">
                     <div class="advantages">
+                        <div id="dws-slider" class="carousel slide" data-ride="carousel">
+                            <!--Показатели-->
+                            <ol class="carousel-indicators">
+                                <li data-target="#dws-slider" data-slide-to="0" class="active"></li>
+                                <li data-target="#dws-slider" data-slide-to="1"></li>
+                                <li data-target="#dws-slider" data-slide-to="2"></li>
+                            </ol>            
+                            <!--Обертка для слайдов-->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active"><img src="img/470.png" alt="Картинка 1">
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                                <div class="item"><img src="img/475.png" alt="Картинка 2">
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                                <div class="item"><img src="img/420.png" alt="Картинка 3">
+                                    <div class="carousel-caption">
+                                    </div>
+                                </div>
+                            </div>            
+                            <!--Элементы управления-->
+                            <a class="left carousel-control" href="#dws-slider" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#dws-slider" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <script>
+                            $('.carousel').carousel({
+                                interval: 6000
+                            })
+                        </script>                            
+                        <span class="our_company">
                         Наша компания "POWERBOAT" основана в 2015 году. Мы занимаемся производством и продажей моторных катеров и понтонных лодок, подъемных механизмов и аксессуаров для водного транспорта. Наши высококвалифицированные специалисты имеют возможность воплотить так же и вашу мечту в реальность – создать такую лодку, о которой вы всегда мечтали.
+                        </span>
                     </div>    
                 </div>
                 <div class="cell"></div>
             </div>       
-                <div id="dws-slider" class="carousel slide" data-ride="carousel">
-                    <!--Показатели-->
-                    <ol class="carousel-indicators">
-                        <li data-target="#dws-slider" data-slide-to="0" class="active"></li>
-                        <li data-target="#dws-slider" data-slide-to="1"></li>
-                        <li data-target="#dws-slider" data-slide-to="2"></li>
-                    </ol>            
-                    <!--Обертка для слайдов-->
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img src="img/470.png" alt="Картинка 1">
-                            <div class="carousel-caption">
-                                <h3 class="text-uppercase">POWERBOAT 470</h3>
-                                <p class="specifications">КИЛЕВАТОСТЬ 14°/24° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 115 ЛС <br> МАССА 470 КГ</p>
-                            </div>
-                        </div>
-                        <div class="item"><img src="img/475.png" alt="Картинка 2">
-                            <div class="carousel-caption">
-                                <h3 class="text-uppercase">POWERBOAT 475</h3>
-                                <p class="specifications">КИЛЕВАТОСТЬ 11.7°/17° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 60 ЛС <br> МАССА 430 КГ</p>
-                            </div>
-                        </div>
-                        <div class="item"><img src="img/420.png" alt="Картинка 3">
-                            <div class="carousel-caption">
-                                <h3 class="text-uppercase">POWERBOAT 420</h3>
-                                <p class="specifications">КИЛЕВАТОСТЬ 9°/14° <br> МАКСИМАЛЬНАЯ МОЩНОСТЬ 40 ЛС <br> МАССА 215 КГ</p>
-                            </div>
-                        </div>
-                    </div>            
-                    <!--Элементы управления-->
-                    <a class="left carousel-control" href="#dws-slider" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#dws-slider" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <script>
-                    $('.carousel').carousel({
-                        interval: 6000
-                    })
-                </script>                            
             <form class="form">
                 <p><input type="text" name="name" class="feedback-input" placeholder="Имя"></p>
                 <p><input type="tel." name="tel." class="feedback-input" placeholder="Тел." id="tel."></p>
